<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/cust_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tables"
            android:icon="@drawable/cust_table2_24"
            android:title="@string/menu_tables"/>
        <item
            android:id="@+id/nav_staff_signin"
            android:icon="@drawable/cust_user_circle_24"
            android:title="@string/staff_sign_in" />
        <item
            android:id="@+id/nav_cash_history"
            android:icon="@drawable/cust_monetization_on_24"
            android:title="@string/cash_history" />

        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/cust_bookings_24"
            android:title="@string/bookings" />


    </group>
</menu>