<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="128dp"
        android:layout_height="105dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cust_local_dining_24"
        tools:layout_conversion_absoluteHeight="140dp"
        tools:layout_conversion_absoluteWidth="117dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="255dp"
        android:layout_height="506dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#455A64"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="352dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#795548"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="352dp" />

        <CheckBox
            android:id="@+id/recUserCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/remember_user"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="143dp" />

        <CheckBox
            android:id="@+id/conditionsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_conditions" />

        <TextView
            android:id="@+id/conditionsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:minHeight="48dp"
            android:text="@string/src_conditions"
            android:textIsSelectable="false" />

        <Button
            android:id="@+id/noButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/AppColorPrincipal"
            android:insetLeft="20dp"
            android:insetRight="20dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:cornerRadius="40dip"
            tools:layout_conversion_absoluteHeight="53dp"
            tools:layout_conversion_absoluteWidth="352dp" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/AppColorPrincipal"
            android:insetLeft="20dp"
            android:insetRight="20dp"
            android:minHeight="48dp"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:cornerRadius="40dip"
            tools:layout_conversion_absoluteHeight="53dp"
            tools:layout_conversion_absoluteWidth="352dp" />

        <Button
            android:id="@+id/rellenarButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rellanar Sergio"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/rellenarButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rellanar Marcos"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>