<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_tables"
        android:name="com.example.appbar.ui.tables.TablesFragment"
        android:label="@string/menu_tables"
        tools:layout="@layout/fragment_tables" >
        <action
            android:id="@+id/action_nav_tables_to_nav_table_box"
            app:destination="@id/nav_table_box" />
    </fragment>

    <fragment
        android:id="@+id/nav_table_selected"
        android:name="com.example.appbar.ui.table_selected.TableSelectedFragment"
        android:label="@string/table_select"
        tools:layout="@layout/fragment_table_selected" >
        <action
            android:id="@+id/action_nav_table_selected_to_cashFragment"
            app:destination="@id/nav_cash_fragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_table_box"
        android:name="com.example.appbar.ui.table_box.TableBoxFragment"
        android:label="Gestion Mesa"
        tools:layout="@layout/fragment_table_box">
        <action
            android:id="@+id/action_nav_tables_to_nav_table_selected"
            app:destination="@id/nav_table_selected" />
        <action
            android:id="@+id/action_nav_table_box_pop2"
            app:popUpTo="@id/nav_table_box"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_table_items"
        android:name="com.example.appbar.ui.tables.TableItemsSelected"
        android:label="Añadir articulo a mesa"
        tools:layout="@layout/fragment_items">
        <action
            android:id="@+id/action_nav_tables_to_nav_table_selected"
            app:destination="@id/nav_table_selected" />
    </fragment>

    <fragment
        android:id="@+id/nav_remove_items_basket"
        android:name="com.example.appbar.ui.table_remove_item_basket.TableRemoveItemBasket"
        android:label="Modificación de cesta"
        tools:layout="@layout/fragment_remove_item_basket">
        <action
            android:id="@+id/action_nav_remove_basket_to_nav_table_selected"
            app:destination="@id/nav_table_selected" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appbar.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_items"
        android:name="com.example.appbar.ui.items.ItemsFragment"
        android:label="@string/items"
        tools:layout="@layout/fragment_items">
        <action
            android:id="@+id/action_nav_tables_to_nav_table_selected"
            app:destination="@id/nav_item_add_update" />
        <action
            android:id="@+id/action_nav_item_new"
            app:destination="@id/nav_item_new" />
    </fragment>

    <fragment
        android:id="@+id/nav_item_new"
        android:name="com.example.appbar.ui.item_new.ItemNewFragment"
        android:label="Nuevo articulo"
        tools:layout="@layout/fragment_item_add" />

    <fragment
        android:id="@+id/nav_item_add_update"
        android:name="com.example.appbar.ui.item_add_update.ItemUpdateFragment"
        android:label="@string/update"
        tools:layout="@layout/fragment_item_add_update" />

    <fragment
        android:id="@+id/nav_staff_signin"
        android:name="com.example.appbar.ui.staff_signin.StaffSignInFragment"
        android:label="@string/staff_sign_in"
        tools:layout="@layout/fragment_staff_signin" />

    <fragment
        android:id="@+id/nav_cash_history"
        android:name="com.example.appbar.ui.cash_history.CashHistoryFragment"
        android:label="@string/cash_history"
        tools:layout="@layout/fragment_cash_history" />

    <fragment
        android:id="@+id/nav_bookings"
        android:name="com.example.appbar.ui.bookings.BookingsFragment"
        android:label="@string/bookings"
        tools:layout="@layout/fragment_bookings">
        <action
            android:id="@+id/action_nav_booking_selected"
            app:destination="@id/nav_booking_selected" />
        <action
            android:id="@+id/action_nav_booking_delete"
            app:destination="@id/nav_booking_delete" />
    </fragment>

    <fragment
        android:id="@+id/nav_booking_selected"
        android:name="com.example.appbar.ui.booking_select.BookingSelectFragment"
        android:label="Reservas"
        tools:layout="@layout/fragment_booking_select" />
    <fragment
        android:id="@+id/nav_booking_delete"
        android:name="com.example.appbar.ui.booking_select.BookingSelectFragment"
        android:label="Reservas"
        tools:layout="@layout/fragment_booking_delete" />

    <fragment
        android:id="@+id/nav_cash_fragment"
        android:name="com.example.appbar.ui.cash.CashFragment"
        android:label="CashFragment"
        tools:layout="@layout/fragment_cash">
        <action
            android:id="@+id/action_nav_cash_fragment_to_nav_tables"
            app:destination="@id/nav_tables" />
    </fragment>

</navigation>