<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="355dp"
            android:layout_height="651dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/beforeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/nowText"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/getNumTableTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/getCapacityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textColorLink="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/afterTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/newText"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/updateNumTableEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/num_table"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/updateCapacityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/num_persons"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/updateOkButton"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginTop="50dp"
                android:elevation="8dp"
                android:insetLeft="40dp"
                android:insetRight="40dp"
                android:text="@string/ok"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="40dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>